Name:                databrary
Version:             1
Synopsis:            Databrary
Description:         An experimental rewrite of Databrary (http://databrary.org, http://github.com/databrary/databrary) in Haskell.
License:             GPL-3
License-file:        COPYING
Author:              Dylan Simon
Maintainer:          dylan@dylex.net
Stability:           Experimental
Category:            Web
Tested-with:         GHC == 7.8.4
Build-type:          Custom
Cabal-version:       >=1.22

data-files:
  databrary.conf,
  messages.conf,
  schema/*.sql,
  transctl.sh,
  transcode,
  volume.json,
  web/*.min.css,
  web/*.min.js,
  web/icons/*.ico,
  web/icons/*.png,
  web/icons/*.svg,
  web/icons/release/*.svg,
  web/images/*.png,
  web/images/elements/*.svg,
  web/images/filetype/16px/*.svg,
  web/images/grants/*.png,
  web/images/logo/*.png,
  web/images/logo/*.svg,
  web/images/social/16px/*.png,
  web/lib/*.min.js,
  solr/solr.xml,
  solr/log4j.properties,
  solr/conf/*.xml,
  solr/conf/*.txt

Source-Repository head
  Type:	git
  Location: https://github.com/databrary/databrary

Flag tls
  description: Enable TLS/SSL https connections
  default: True

Flag devel
  description: Enable development mode
  default: False
  manual: True

Flag sandbox
  description: Enable sandbox/demo mode
  default: False
  manual: True

Executable schemabrary
  main-is: Databrary/Setup/DB.hs
  default-language: Haskell2010
  build-depends:
    base == 4.7.*,
    bytestring >= 0.10,
    transformers == 0.4.*,
    transformers-base,
    mtl >= 2.2.1,
    monad-control >= 1,
    lifted-base,
    template-haskell,
    filepath,
    directory,
    configurator,
    resource-pool,
    network,
    postgresql-typed == 0.4.1

Executable databrary
  main-is: Databrary/Main.hs
  other-modules: Databrary.Store.AV
  c-sources: Databrary/Store/avFrame.c

  build-depends:
    base == 4.7.*,
    bytestring >= 0.10,
    containers,
    transformers == 0.4.*,
    transformers-base,
    mtl >= 2.2.1,
    monad-control >= 1,
    lifted-base,
    template-haskell,
    th-lift,
    th-lift-instances,
    haskell-src-meta,
    time,
    old-locale,
    unix,
    filepath,
    posix-paths,
    directory,
    process,
    data-default-class,
    text,
    utf8-string,
    hashable >= 1.2.1,
    unordered-containers,
    attoparsec,
    network,
    network-uri,
    http-types,
    wai,
    wai-extra,
    warp,
    case-insensitive,
    aeson,
    vector,
    cookie,
    configurator,
    resource-pool,
    scientific,
    postgresql-typed == 0.4.1,
    memory >= 0.8,
    cryptonite,
    resourcet,
    streaming-commons,
    blaze-builder >= 0.4,
    blaze-markup,
    blaze-html,
    regex-posix,
    bcrypt,
    http-client,
    http-client-tls,
    mime-mail,
    fast-logger,
    digest,
    hjsonschema,
    aeson-better-errors > 0.9.0,
    xml

  if flag(tls)
    Build-depends: warp-tls

  default-language: Haskell2010
  default-extensions: MultiParamTypeClasses, FlexibleContexts, FlexibleInstances, ScopedTypeVariables, ConstraintKinds, PatternGuards

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields

  if flag(devel)
    cpp-options: -DDEVEL
  else
    ghc-options: -with-rtsopts -N
  if flag(sandbox)
    cpp-options: -DSANDBOX

  pkgconfig-depends: libavformat, libswscale, libavcodec, libavutil
  extra-libraries: crack
  build-tools: npm
